[package]
name = "spx-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
oxc = { workspace = true }
oxc_resolver = { workspace = true }
spx-cache = { path = "../spx-cache" }
spx-transpiler = { path = "../spx-transpiler" }

[dev-dependencies]
tempfile = "3"
