[package]
name = "spx-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
interprocess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
spx-transpiler = { path = "../spx-transpiler" }
spx-cache = { path = "../spx-cache" }
